<resources>
    <string name="app_name">Cafe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="coffee_image">coffee Image</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="register_sub">Let’s help you set up your account, it won’t take long.</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>