<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".ui.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCoffee"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/coffee_image"
                android:scaleType="fitStart"
                android:src="@drawable/login" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivCoffee"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtWelcome"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="VisualLintOverlap" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBack"
                android:hint="@string/email"
                app:helperTextTextColor="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/hint"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textFieldEmail"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:helperTextTextColor="@color/hint"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/hint"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textFieldPassword"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:padding="15dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <View
                android:id="@+id/divider"
                android:layout_below="@id/btnLogin"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hint" />

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_below="@id/divider"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/hint"
                    android:text="@string/don_t_have_account" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/link"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:text="@string/register" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:elevation="10dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>